--- a/src/pages/main/Main.css
+++ b/src/pages/main/Main.css
@@ -56,6 +56,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-family: 'Montserrat';
+    color: white;
 }
 
 .dynamic_button.true {
